# school_schedule

./: .gitignore  README.md  flake.nix  index.html  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  vite.config.ts
.svelte-kit/: tsconfig.json
core/: Cargo.toml  tauri.conf.json
core/src/: db.rs  lib.rs  main.rs
core/src/ai/: fs_extra.rs  gpt.rs  mod.rs
core/src/class/: aula.rs  docente.rs  group.rs  grupo.rs  materia.rs  mod.rs  subject.rs  teacher.rs
interface/: App.svelte  README.md  main.ts  styles.css  tailwind.config.js
interface/app/: +layout.svelte  +page.svelte  FormAulas.svelte  FormGrupos.svelte  FormMaestros.svelte  FormMaterias.svelte  FormTopics.svelte  Login.svelte  MainGrupos.svelte  Navbar.svelte  RegistroGrupos.svelte  generate_form.svelte  nosotros.svelte
interface/app/components/: CBMaterias.svelte  ColorPicker.svelte  Navbar.svelte  (+9 more)
interface/components/: InputText.svelte
interface/lib/: Subjects.svelte  Teachers.svelte
interface/styles/: crud_view.css  nav.css
interface/windows/: aulas.ts  grupos.ts  maestros.ts  materias.ts
nix/: default.nix
public/window/: VistaAulas.html  VistaGrupos.html  VistaMaestros.html  VistaMaterias.html
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20240903155251_create_tables.sql
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/class/: mod.rs  subjects.rs  teachers.rs
src/routes/: +layout.ts  +page.svelte
src/styles/: _mixins.scss  _variables.scss  form.scss  global.scss  grid.scss  nav.scss  table.scss
(+46 files in other folders)
